[package]
name = "lldap_domain"
version = "0.1.0"
authors = [
    "Valentin Tolmer <valentin@tolmer.fr>",
    "Simon Broeng Jensen <sbj@cwconsult.dk>",
]
edition = "2021"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
test = []

[dependencies]
anyhow = "*"
base64 = "0.21"
bincode = "1.3"
juniper = "0.15"
serde_bytes = "0.11"

[dev-dependencies]
pretty_assertions = "1"

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.derive_more]
features = ["debug", "display", "from", "from_str"]
default-features = false
version = "1"

[dependencies.image]
features = ["jpeg"]
default-features = false
version = "0.24"

[dependencies.lldap_auth]
path = "../auth"
features = ["opaque_server", "opaque_client", "sea_orm"]

[dependencies.sea-orm]
workspace = true
features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "sqlx-all",
    "runtime-actix-rustls",
]

[dependencies.serde]
workspace = true

[dependencies.strum]
features = ["derive"]
version = "0.25"

[dependencies.uuid]
features = ["v1", "v3"]
version = "1"
