[package]
authors = ["Valentin Tolmer <valentin@tolmer.fr"]
description = "Frontend options for LLDAP"
edition = "2024"
homepage = "https://github.com/lldap/lldap"
license = "GPL-3.0-only"
name = "lldap_frontend_options"
repository = "https://github.com/lldap/lldap"
version = "0.1.0"

[dependencies.serde]
workspace = true
