[package]
name = "lldap_graphql_server"
version = "0.1.0"
description = "GraphQL server for LLDAP"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
juniper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

[dependencies.lldap_access_control]
path = "../access-control"

[dependencies.lldap_auth]
path = "../auth"
features = ["opaque_server", "opaque_client", "sea_orm"]

[dependencies.lldap_domain]
path = "../domain"

[dependencies.lldap_domain_model]
path = "../domain-model"

[dependencies.lldap_domain_handlers]
path = "../domain-handlers"

[dependencies.lldap_ldap]
path = "../ldap"

[dependencies.lldap_sql_backend_handler]
path = "../sql-backend-handler"

[dependencies.lldap_validation]
path = "../validation"

[dev-dependencies]
mockall = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true }

#[dev-dependencies.lldap_auth]
#path = "../auth"
#features = ["test"]
#
#[dev-dependencies.lldap_opaque_handler]
#path = "../opaque-handler"
#features = ["test"]

[dev-dependencies.lldap_test_utils]
path = "../test-utils"
#
#[dev-dependencies.lldap_sql_backend_handler]
#path = "../sql-backend-handler"
#features = ["test"]
