[package]
name = "lldap_ldap"
version = "0.1.1"
description = "LDAP operations support"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

derive_more = { workspace = true }

chrono = { workspace = true }

rand = { workspace = true }

uuid = { workspace = true }

ldap3_proto = { workspace = true }

[dependencies.lldap_access_control]
path = "../access-control"

[dependencies.lldap_auth]
path = "../auth"
features = ["opaque_server", "opaque_client", "sea_orm"]

[dependencies.lldap_domain]
path = "../domain"

[dependencies.lldap_domain_handlers]
path = "../domain-handlers"

[dependencies.lldap_domain_model]
path = "../domain-model"

[dependencies.lldap_opaque_handler]
path = "../opaque-handler"

[dev-dependencies.lldap_test_utils]
path = "../test-utils"

[dev-dependencies]
mockall = { workspace = true }
pretty_assertions = { workspace = true }

tokio = { workspace = true }

[dev-dependencies.lldap_domain]
path = "../domain"
features = ["test"]
