[package]
name = "lldap_sql_backend_handler"
version = "0.1.0"
description = "SQL backend for LLDAP"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
test = []

[dependencies]
anyhow = "*"
async-trait = "0.1"
base64 = "0.21"
bincode = "1.3"
itertools = "0.10"
ldap3_proto = "0.6.0"
orion = "0.17"
serde_json = "1"
tokio = { version = "1.25", features = ["sync", "rt"] }
tracing = "*"

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.rand]
features = ["small_rng", "getrandom"]
version = "0.8"

[dependencies.sea-orm]
workspace = true
features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "sqlx-all",
    "runtime-actix-rustls",
]

[dependencies.secstr]
features = ["serde"]
version = "*"

[dependencies.serde]
workspace = true

[dependencies.uuid]
version = "1"
features = ["v1", "v3"]

[dependencies.lldap_access_control]
path = "../access-control"

[dependencies.lldap_auth]
path = "../auth"
features = ["opaque_server", "opaque_client", "sea_orm"]

[dependencies.lldap_domain]
path = "../domain"

[dependencies.lldap_domain_handlers]
path = "../domain-handlers"

[dependencies.lldap_domain_model]
path = "../domain-model"

[dependencies.lldap_opaque_handler]
path = "../opaque-handler"

[dev-dependencies.lldap_test_utils]
path = "../test-utils"

[dev-dependencies]
log = "*"
mockall = "0.11.4"
pretty_assertions = "1"

[dev-dependencies.tokio]
features = ["full"]
version = "1.25"

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "tracing-log"]
