[package]
name = "lldap_sql_backend_handler"
version = "0.1.1"
description = "SQL backend for LLDAP"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
test = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
itertools = { workspace = true }
orion = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

bincode = { workspace = true }

base64 = { workspace = true }

chrono = { workspace = true }

rand = { workspace = true }

sea-orm = { workspace = true }

secstr = { workspace = true }

serde = { workspace = true }

uuid = { workspace = true }

ldap3_proto = { workspace = true }

[dependencies.lldap_access_control]
path = "../access-control"

[dependencies.lldap_auth]
path = "../auth"
features = ["opaque_server", "opaque_client", "sea_orm"]

[dependencies.lldap_domain]
path = "../domain"

[dependencies.lldap_domain_handlers]
path = "../domain-handlers"

[dependencies.lldap_domain_model]
path = "../domain-model"

[dependencies.lldap_opaque_handler]
path = "../opaque-handler"

[dev-dependencies.lldap_domain]
path = "../domain"
features = ["test"]

[dev-dependencies.lldap_test_utils]
path = "../test-utils"

[dev-dependencies]
log = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }

tokio = { workspace = true }

tracing-subscriber = { workspace = true }
