[package]
name = "lldap_test_utils"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
mockall = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }

ldap3_proto = { workspace = true }

[dependencies.lldap_access_control]
path = "../access-control"

[dependencies.lldap_domain]
path = "../domain"

[dependencies.lldap_domain_handlers]
path = "../domain-handlers"

[dependencies.lldap_domain_model]
path = "../domain-model"

[dependencies.lldap_opaque_handler]
path = "../opaque-handler"
features = ["test"]
